Table truncation + fixes

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -185,7 +185,7 @@ input.textinput:focus {
 }
 
 .page > * {
-    margin: 10px;
+    margin: 20px;
 }
 
 .table-extractor {
